--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -4,14 +4,14 @@
 \usepackage{unixode}
 \usepackage{tikz, tikz-cd}
 \usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 \usetikzlibrary{positioning}
 \usepackage[catalan]{babel}
-\usepackage[left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
+\usepackage[left=3cm, right=3cm, top=3cm, bottom=3cm]{geometry}
 \usepackage{csquotes}
 \DeclareQuoteStyle{catalan}{``}{''}{``}{''}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 \usepackage[all]{xy}
-\usepackage[left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage{mathsymbols}
 
 \addto\captionscatalan{\renewcommand{\chaptername}{Episodi}}
@@ -21,4 +21,3 @@
 \DeclareRobustCommand{\and}{%
 \end{tabular}\kern-\tabcolsep\\\begin{tabular}[t]{c}%
 }
-
