--- a/src/03-RegleCompas.Rmd
+++ b/src/03-RegleCompas.Rmd
@@ -37,6 +37,7 @@ de nombres ja construïts.
 
 ::: {.exercise}
 Demostreu que si el diàmetre de la circumferència és $\alpha+1$, aleshores el segment vertical indicat mesura $\sqrt{\alpha}$.
+
 ```{r, echo=FALSE, engine='tikz', out.width='60%', fig.ext='png'}
 \begin{tikzpicture}[scale=0.2]
   \useasboundingbox (0, 0) rectangle (59.5, 84.2);
@@ -101,7 +102,7 @@ l'angle de $3^\circ$. És clar que no podem construir ni $2^\circ$ ni $1^\circ$,
 múltiple d'aquests i, per tant, podríem construir $20^\circ$, que ja sabem que no és possible.
 :::
 
-## Construccions amb regle marcat i compas
+## Construccions amb regle marcat i compàs
 
 Aquí veurem que si el regle té dues marques a una distància qualsevol, aleshores podem trisecar l'angle i duplicar el cub.
 
