Added more theory

--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -4,7 +4,8 @@
 \providecommand{\FF}{\mathbb{F}}
 \providecommand{\CC}{\mathbb{C}}
 \providecommand{\HH}{\mathbb{H}}
-
+\providecommand{\QQbar}{\bar{\QQ}}
+\providecommand{\barQQ}{\bar{\QQ}}
 \providecommand{\cC}{\mathcal{C}}
 
 \providecommand{\fX}{\mathfrak{X}}
@@ -41,5 +42,8 @@
 \providecommand{\Mor}{\operatorname{Mor}}
 % \providecommand{\implies}{\Longrightarrow}
 
-\providecommand{\char}{\operatorname{char}}
+% \providecommand{\char}{\operatorname{char}}
 \providecommand{\car}{\operatorname{char}}
+
+\providecommand{\mcd}{\operatorname{mcd}}
+\providecommand{\gcd}{\operatorname{mcd}}
